# Continuous_Integration_And_Mocking_Practice

./: Cargo.toml  Jenkinsfile  README.md  TODO.txt
src/: calc.rs  frontend.txt  main.rs  store.rs
static/: test.txt
