[package]
name = "PPA2"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "frontend"
# path = "src/frontend.rs"

[dependencies]
regex = "1"
clap = "2.33.0"
assert_approx_eq = "1.1.0"
postgres = "0.15.2"
actix-files = "0.1.6"
actix-web = "1.0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yew = "0.9.2"
